src/temp.txt
/home/wheeltec/Robot_Control/src/stanley_controller/src/stanley_controller.cpp: In function ‘std::pair<double, int> stanley_control(const State&, const std::vector<double>&, const std::vector<double>&, const std::vector<double>&, int)’:
/home/wheeltec/Robot_Control/src/stanley_controller/src/stanley_controller.cpp:83:10: warning: structured bindings only available with ‘-std=c++17’ or ‘-std=gnu++17’
   83 |     auto [current_target_idx, error_front_axle] = calc_target_index(state, cx, cy);
      |          ^
/home/wheeltec/Robot_Control/src/stanley_controller/src/stanley_controller.cpp: In function ‘void main_simulation()’:
/home/wheeltec/Robot_Control/src/stanley_controller/src/stanley_controller.cpp:143:10: error: ‘rc’ is not a member of ‘plt’
  143 |     plt::rc("font", {{"family", "SimHei"}}); // 使用 SimHei 字体（需确保系统中已安装）
      |          ^~
/home/wheeltec/Robot_Control/src/stanley_controller/src/stanley_controller.cpp:144:10: error: ‘rc’ is not a member of ‘plt’
  144 |     plt::rc("axes", {{"unicode_minus", "False"}}); // 避免负号显示问题
      |          ^~
/home/wheeltec/Robot_Control/src/stanley_controller/src/stanley_controller.cpp:184:18: warning: structured bindings only available with ‘-std=c++17’ or ‘-std=gnu++17’
  184 |             auto [di, new_target_idx] = stanley_control(state, cx, cy, cyaw, target_idx);
      |                  ^
make[2]: *** [stanley_controller/CMakeFiles/stanley_controller_node.dir/build.make:63：stanley_controller/CMakeFiles/stanley_controller_node.dir/src/stanley_controller.cpp.o] 错误 1
make[1]: *** [CMakeFiles/Makefile2:1151：stanley_controller/CMakeFiles/stanley_controller_node.dir/all] 错误 2
make: *** [Makefile:141：all] 错误 2
Invoking "make -j6 -l6" failed